WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226823
Scrollbars are not clipped to layer bounds in RenderLayerBacking
https://bugs.webkit.org/show_bug.cgi?id=226823
Summary
Scrollbars are not clipped to layer bounds in RenderLayerBacking
Chris Lord
Reported
2021-06-09 09:15:42 PDT
As in the summary - perhaps it's intentional that scrollbars can appear outside of the content they correspond to, but this is causing some tests to fail with async overflow scroll enabled; namely imported/w3c/web-platform-tests/css/css-flexbox/overflow-auto-001.html (and perhaps more that we'll find out via EWS/bots if this lands)
Attachments
Patch
(2.06 KB, patch)
2021-06-09 09:18 PDT
,
Chris Lord
no flags
Details
Formatted Diff
Diff
Patch
(2.17 KB, patch)
2021-06-14 08:40 PDT
,
Chris Lord
no flags
Details
Formatted Diff
Diff
Patch
(25.19 KB, patch)
2021-06-15 03:26 PDT
,
Chris Lord
no flags
Details
Formatted Diff
Diff
Patch
(26.37 KB, patch)
2021-06-15 04:04 PDT
,
Chris Lord
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Chris Lord
Comment 1
2021-06-09 09:18:00 PDT
Created
attachment 430970
[details]
Patch
Chris Lord
Comment 2
2021-06-14 08:40:19 PDT
Created
attachment 431325
[details]
Patch
Chris Lord
Comment 3
2021-06-14 09:15:50 PDT
Comment on
attachment 431325
[details]
Patch The 1 failure on Mac is because the expectations don't expect the overflow container layer to clip its children (which is what this patch modifies) - assuming the approach is deemed correct, I'll modify the expectations.
Chris Lord
Comment 4
2021-06-15 03:26:47 PDT
Created
attachment 431419
[details]
Patch
Chris Lord
Comment 5
2021-06-15 04:04:23 PDT
Created
attachment 431420
[details]
Patch
Chris Lord
Comment 6
2021-06-15 06:13:42 PDT
Comment on
attachment 431420
[details]
Patch Added a test for this in compositing/scrolling/async-overflow-scrolling as the only test that was hitting this was in WPT.
EWS
Comment 7
2021-06-15 11:12:41 PDT
Committed
r278883
(
238825@main
): <
https://commits.webkit.org/238825@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 431420
[details]
.
Radar WebKit Bug Importer
Comment 8
2021-06-15 11:13:20 PDT
<
rdar://problem/79351898
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug