Scrollbars are not clipped to layer bounds in RenderLayerBacking https://bugs.webkit.org/show_bug.cgi?id=226823

Reviewed by Simon Fraser.

Source/WebCore:

Mask contents to bounds of overflow controls containers in RenderLayerBacking.

Test: compositing/scrolling/async-overflow-scrolling/overflow-controls-container-clips-scrollbars.html

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateGeometry):
(WebCore::RenderLayerBacking::adjustOverflowControlsPositionRelativeToAncestor):

LayoutTests:

Adjust test expectations due to clipping on overflow controls container.

* compositing/clipping/border-radius-async-overflow-clipping-layer-expected.txt:
* compositing/layer-creation/clipping-scope/nested-scroller-overlap-expected.txt:
* compositing/rtl/rtl-scrolling-with-transformed-descendants-expected.txt:
* compositing/scrolling/async-overflow-scrolling/clipped-layer-in-overflow-clipped-by-scroll-expected.txt:
* compositing/scrolling/async-overflow-scrolling/clipped-layer-in-overflow-expected.txt:
* compositing/scrolling/async-overflow-scrolling/clipped-layer-in-overflow-nested-expected.txt:
* compositing/scrolling/async-overflow-scrolling/layer-for-negative-z-in-scroller-expected.txt:
* compositing/scrolling/async-overflow-scrolling/layer-in-overflow-clip-to-hidden-expected.txt:
* compositing/scrolling/async-overflow-scrolling/layer-in-overflow-clip-to-visible-expected.txt:
* compositing/scrolling/async-overflow-scrolling/layer-in-overflow-expected.txt:
* compositing/scrolling/async-overflow-scrolling/layer-in-overflow-gain-clipping-layer-expected.txt:
* compositing/scrolling/async-overflow-scrolling/layer-in-overflow-in-clipped-expected.txt:
* compositing/scrolling/async-overflow-scrolling/layer-in-overflow-lose-clipping-layer-expected.txt:
* compositing/scrolling/async-overflow-scrolling/nested-scrollers-backing-attachment-expected.txt:
* compositing/scrolling/async-overflow-scrolling/overflow-controls-container-clips-scrollbars-expected.html: Added.
* compositing/scrolling/async-overflow-scrolling/overflow-controls-container-clips-scrollbars.html: Added.
* compositing/scrolling/async-overflow-scrolling/transform-change-scrollbar-position-expected.txt:
* compositing/scrolling/async-overflow-scrolling/visibility-hidden-scrollers-expected.txt:
* compositing/shared-backing/overflow-scroll/previous-sibling-prevents-inclusiveness-expected.txt:
* compositing/tiling/perspective-on-scroller-tile-coverage-expected.txt:
* platform/mac-wk1/compositing/clipping/border-radius-async-overflow-clipping-layer-expected.txt:
* tiled-drawing/scrolling/overflow/overflow-scrolled-down-tile-coverage-expected.txt:
* tiled-drawing/scrolling/overflow/overflow-scrolled-up-tile-coverage-expected.txt:
* tiled-drawing/scrolling/overflow/overflow-tile-coverage-expected.txt:


Canonical link: https://commits.webkit.org/238825@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278883 268f45cc-cd09-0410-ab3c-d52691b4dbfc